--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ nav{
     z-index: 1000;
     right: 0;
     margin-right: 30px;
-    justify-content: center;
+    justify-content: center
     gap: 20px;
 }
 
