--- a/style.css
+++ b/style.css
@@ -12,20 +12,19 @@ html{
 /***** MENU *****/
 
 nav{
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    height: 100vh;
     position: fixed;
-    z-index: 1000;
     right: 0;
     margin-right: 30px;
     justify-content: center;
     gap: 20px;
+    z-index: 1000;
 }
 
 .btn_name{
     position: relative;
-    height: 150px;
 }
 
 .btn_name:hover h1{
@@ -33,15 +32,8 @@ nav{
     opacity: 1;
 }
 
-
 :root{
     --button-width: 30px;
-}
-
-.block-button{
-    display: flex;
-    position: relative;
-    justify-content: flex-end;
 }
 
 #button{
@@ -50,8 +42,8 @@ nav{
     border-radius: 30px;
     background-color: white;
     position: relative;
-    z-index: 2;
     overflow-y: hidden;
+    z-index: 1;
 }
 
 .button-hover{
@@ -65,7 +57,6 @@ nav{
 #button:hover .button-hover{
     top: 0;
 }
-
 
 .button-triangle{
     width: 0;
@@ -87,29 +78,25 @@ nav h1{
     font-weight: 100;
     position: absolute;
     transform: translateY(-50%);
+    color: white;
+    pointer-events: none;
     transition: all 1s;
     right: 0;
     opacity: 0; 
-    color: white;
     top: 50%;
-    pointer-events: none;
-    white-space: nowrap;
 }
-
 
 /***** ACCUEIL *****/
 
 #accueil{
-    /* 
+    /* Pour la suite
     top: 0;
     left: 0;
     z-index: 1;
-        Pour la suite */
-        width: 100%;
+         */
+        display: flex;
         height: 100vh;
         background-color: black;
-        display: flex;
-        align-items: flex-start;
         flex-direction: column;
         justify-content: center;
 }
@@ -118,22 +105,19 @@ nav h1{
     font-family: 'Aboreto', cursive;
     font-size: 70px;
     font-weight: 100;
-    position: relative;
 }
-
 
 .bouton-accueil{
     width: 150px;
-    height: 30px;
-    font-family: 'Aboreto', cursive;
-    font-weight: 800;
     border-radius: 30px;
     background-color: white;
+    border: 1px solid white;
+    font-family: 'Aboreto', cursive;
+    font-weight: 800;
     text-decoration: none;
     color: black;
     text-align: center;
     line-height: 30px;
-    border: 1px solid white;
 }
 
 .bouton-accueil:hover{
@@ -141,7 +125,6 @@ nav h1{
     background-color: black;
     border: 1px solid white;
 }
-
 
 .choice{
     display: flex;
@@ -151,28 +134,18 @@ nav h1{
 
 .discover{
     width: fit-content;
-    height: fit-content;
     color: white;
     margin-left: 10%;
 }
 
-
 .arrow{
     width: 35px;
-    height: 35px;
     animation: blinker 2.2s linear infinite;
-    justify-content: center;
     position: absolute;
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
 }
-
-.arrow a{
-    width: 35px;
-}
-
-
 
 @keyframes blinker {
   50% {
@@ -182,45 +155,27 @@ nav h1{
 /***** PROFIL *****/
 
 #profil{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
     background-color: #011640;
     color: white;
 }
 
-
-.part1{
+.left-content{
     display: flex;
     width: 80%;
     height: 100vh;
     margin: 0 auto;
 
-    position: relative;
-    z-index: 1;
-
+    justify-content: center;
 }
 
-.part2{
+.right-content{
     display: flex;
-    justify-content: flex-end;
     width: 80%;
-    height: 200vh;
+    height: 100vh;
     margin: 0 auto;
-    position: relative;
-    z-index: 2;
     flex-direction: row-reverse;
+    justify-content: center;
 }
-
-.part3{
-    display: flex;
-    width: 80%;
-    height: 200vh;
-    margin: 0 auto;
-    position: relative;
-    z-index: 3;
-}
-
 
 .contenu{
     position: sticky;
@@ -228,16 +183,31 @@ nav h1{
     width: 500px;
     top: 20%;
     background: white;
-    color: black;
+    z-index: 1;
   }
 
-  .texte{
+.texte{
     width: 50%;
     position: relative;
     top: 20%;
     margin-left: 30px;
     text-align: justify;
     font-size: 20px;
+}
+
+.texte-droite{
+    width: 50%;
+    position: relative;
+    top: 20%;
+    margin-right: 30px;
+    text-align: justify;
+    font-size: 20px;
+}
+
+.infos h1{
+    background-color: black;
+    width: 100%;
+    padding: 5px;
 }
 
 
