--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
 html{
     scroll-behavior:smooth
 }
-/* test git */
 
 /***** MENU *****/
 
@@ -45,6 +44,7 @@ nav{
     position: relative;
     overflow-y: hidden;
     z-index: 1;
+    border: 1px solid white;
 }
 
 .button-hover{
@@ -64,13 +64,13 @@ nav{
     height: 0;
     border-style: solid;
     border-width: 0 0 var(--button-width) var(--button-width);
-    border-color: transparent transparent #973659 transparent;
+    border-color: transparent transparent black transparent;
 }
 
 .button-body{
     width: 100%;
     height: calc(100% - var(--button-width));
-    background-color: #973659;
+    background-color: black;
 }
 
 nav h1{
@@ -90,16 +90,22 @@ nav h1{
 /***** ACCUEIL *****/
 
 #accueil{
-    /* Pour la suite
-    top: 0;
-    left: 0;
-    z-index: 1;
-         */
-        display: flex;
-        height: 100vh;
-        background-color: black;
-        flex-direction: column;
-        justify-content: center;
+    height: 100vh;
+    width: 100%;
+    position: absolute;
+    z-index: 2;
+    display: flex;
+    background-color: black;
+    border-bottom: 2px solid white;
+    flex-direction: column;
+    justify-content: center;
+    transition: 1.5s;
+}
+
+.accueil-clicked{
+    transform: translateY(-100%);
+        transition: 1.5s;
+    animation-delay: 0.5s;
 }
 
 #accueil h1{
@@ -127,6 +133,7 @@ nav h1{
     border: 1px solid white;
 }
 
+
 .choice{
     display: flex;
     gap: 10%;
@@ -139,7 +146,7 @@ nav h1{
     margin-left: 10%;
 }
 
-.arrow{
+#arrow{
     width: 35px;
     animation: blinker 2.2s linear infinite;
     position: absolute;
@@ -185,7 +192,7 @@ nav h1{
     top: 20%;
     background: white;
     z-index: 1;
-  }
+}
 
 .texte{
     width: 50%;
@@ -210,7 +217,6 @@ nav h1{
     width: 100%;
     padding: 5px;
 }
-
 
 
 /***** COMPETENCES *****/
