--- a/admin/adminstyle.css
+++ b/admin/adminstyle.css
@@ -6,11 +6,8 @@
 }
 
 body{
-    background-color: black;
-}
-
-.container{
     display: flex;
+    background-color: black;
     height: 100vh;
     color: white;
     font-family: 'Aboreto', cursive;
@@ -20,8 +17,11 @@ body{
     flex-direction: column;
 }
 
-#titre{
-    margin-bottom: 50px;
+.container{
+    margin-bottom: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .textzone{
@@ -87,4 +87,9 @@ body{
     color: white;
     background-color: black;
     border: 1px solid white;
+}
+
+.alert{
+    margin-top: 10px;
+    color: #af0000;
 }
