--- a/admin/adminstyle.css
+++ b/admin/adminstyle.css
@@ -1,8 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Aboreto&display=swap');
 
+/*****  *****/
+
 *{
     margin: 0;
     padding: 0;
+}
+
+.slide{
+    width: 100%;
+    height: 100vh;
+    background-color: #131313;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.titre{
+    color: white;
+    font: 40px;
+    font-family: 'Aboreto', cursive;
+
 }
 
 /***** LOGIN *****/
@@ -96,7 +115,43 @@
     color: #af0000;
 }
 
+
+
+
 /***** DASHBOARD *****/
+
+.menu{
+    display: flex;
+    width: 80%;
+    justify-content: space-evenly;
+    align-items: center;
+    min-height:100vh;
+    
+}
+
+.cards{
+    display: flex;
+    width: 200px;
+    height: 200px;
+    background-color: white;
+    border-radius: 10%;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: black;
+    font-family: 'Aboreto', cursive;
+    font-weight: 600;
+    font-size: 20px;
+    box-shadow: 5px 5px 16px 4px rgba(255,255,255,0.51);
+    transition: all 0.2s;
+}
+
+.cards:hover{
+    font-size: 23px;
+    width: 210px;
+    height: 210px;
+    color: black;
+}
 
 
 
