--- a/style.css
+++ b/style.css
@@ -221,6 +221,7 @@ nav h1{
     mix-blend-mode: multiply;
     opacity: 0;
     transition: opacity 0.3s;
+    z-index: -1;
 }
 
 .section.active .moi{
@@ -391,9 +392,56 @@ h3.cat{
 /***** CONTACT *****/
 
 #contact{
+    position: relative;
     min-height: 100vh;
     background-color: #c0c0c0;
 }
+
+input[type=text], textarea, input[type=email] {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    margin-right: 0px;
+    margin-left: 0px;
+    resize: vertical;
+  }
+  label{margin-right: 0px;
+    margin-left: 0px;
+    width: 100%;}
+  
+  input[type=submit] {
+    background-color: #1255a2;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #1872D9;
+  }
+  
+  .containercontact {
+    /* Ajouter box-sizing */
+    box-sizing : border-box;
+    border-radius:5px;
+    background-color:#f2f2f2;
+    padding:20px;
+    width: 100%;
+    /* redéfinition 400 + 2*20 */
+    max-width: 440px;
+    margin:0 auto;
+  }
+  h1.contact  {
+    color: #ffc800;
+    width: 100%;
+  }
+
 
 
 /***** 1350px *****/
