--- a/style.css
+++ b/style.css
@@ -310,10 +310,32 @@ nav h1{
     padding: 5px;
 }
 
-
-/***** COMPETENCES *****/
+/***** SKILLS *****/
 
 #competences{
+    min-height: 50vh;
+    background-color: black;
+    display: grid;
+    position: relative;
+    justify-items: center;
+    grid-template-columns: 1fr 1fr 1fr; /* Changer ici pour le responsive*/
+}
+
+.skills{
+    display: flex;
+    width: 200px;
+    height: 100px;
+    background-color: white;
+    text-decoration: none;
+    color: black;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/***** MY WORK *****/
+
+#myWork{
     min-height: 100vh;
     background-color: black;
     display: flex;
