--- a/style.css
+++ b/style.css
@@ -313,12 +313,11 @@ nav h1{
 /***** SKILLS *****/
 
 #competences{
-    min-height: 50vh;
+    min-height: 10vh;
     background-color: black;
     display: grid;
     position: relative;
-    justify-items: center;
-    grid-template-columns: 1fr 1fr 1fr; /* Changer ici pour le responsive*/
+
 }
 
 .skills{
@@ -330,6 +329,20 @@ nav h1{
     color: black;
     justify-content: center;
     align-items: center;
+}
+
+.skillsWrapper{
+    display: grid;
+    justify-items: center;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    width: 70%;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+#competences img{
+    width: 50px;
+    height: 50px;
 }
 
 
@@ -399,17 +412,28 @@ h3.cat{
 
 #galerie{
     min-height: 100vh;
-    background-color: #011640;
+    background-color: black;
+    
 }
 
-.echo{
-    height: 100px;
-    width: 100%;
-    display: flex;
-    background-color: grey;
+.gallery{
+    background-color: black;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    width: 70%;
+    margin: 0 auto;
+    row-gap: 15%;
 }
 
+.titre{
+    color: white;
+}
 
+.format{
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
 
 /***** CONTACT *****/
 
