--- a/style.css
+++ b/style.css
@@ -343,12 +343,13 @@ nav h1{
 #competences img{
     width: 50px;
     height: 50px;
+    object-fit: contain;
 }
 
 
 /***** MY WORK *****/
 
-#myWork{
+.montravail{
     min-height: 100vh;
     background-color: black;
     display: flex;
@@ -402,10 +403,15 @@ h3.cat{
     color: white;
 }
 
-/* animation*/
-.slideIn{
-    left: 0;
+.travaux{
+    height: 300px;
+    max-width: 100px;
+    object-fit: cover;
 }
+
+
+/* animation*/
+
 
 
 /***** GALERIE *****/
