--- a/admin/adminstyle.css
+++ b/admin/adminstyle.css
@@ -161,3 +161,8 @@
 
     /***** ADD PRODUCTS *****/
     
+.checkbox{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
