--- a/style.css
+++ b/style.css
@@ -588,34 +588,130 @@ input[type=text], textarea, input[type=email] {
 
 
 
-/***** 1350px *****/
-
-
-@media all and (max-width: 1300px){
+  /***** iPad Pro *****/
+  @media only screen and (min-width: 1024px) and (max-height: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+        
+        /*** GENERAL ***/
+        .normalNav{
+            display: none;
+        }
+        /***** BURGER MENU *****/
     
+        .burger-container {
+            width: 40px;
+            height: 40px;
+            cursor: pointer;
+            position: fixed;
+            z-index: 1001;
+            transition: all 1s;
+            left: 5%;
+            top: 10px;
+          }
+        
+        .burger-container.option-2 span {
+            background-color: white;
+            transition: width 0.5s, background-color 0.5s;
+        }
+        
+        .burger-container.option-2 span:first-child {
+            width: 50%;
+            margin-left: auto;
+        }
+        
+        .burger-container.option-2 span:last-child {
+            width: 50%;
+        }
+        
+        .burger-container.option-2:hover span {
+            background-color: white;
+        }
+        
+          .burger-container.option-2:hover span:first-child {
+            width: 100%;
+        }
+        
+        .burger-container.option-2:hover span:last-child {
+            width: 100%;
+        }
+          
+        .burger-container span {
+            display: block;
+            width: 100%;
+            height: 2px;
+            margin-top: 12px;
+        }
+    
+        .burgerNav{
+            height: 100vh;
+            width: 100%;
+            transition: all 1s;
+            left: -100%;
+            position: fixed;
+            z-index: 1000;
+            display: flex;
+            align-items: center;
+            background: rgba( 47, 47, 47, 0.65 );
+            backdrop-filter: blur( 4.5px );
+        }
+    
+        .on{
+            left: 0!important;
+            position: fixed;
+        }
+    
+        .burgerOn{
+            left: 90%;
+        }   
+    
+        .burgerNav a{
+            color: black;
+            width: 148px;
+            height: 80px;
+            background-color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-decoration: none;
+            border-radius: 20px;
+            font-family: 'Aboreto', cursive;
+            font-weight: 100;
+            font-size: 25px;
+        }
+    
+}
 
-    #accueil h1{
-        font-size: 55px;
-    }
+
+/***** 1400px *****/
+@media all and (max-width: 1400px){
+    /*** ACCUEIL ***/
+        .moi{
+            right: 0;
+        }
+    /*** PROFIL ***/
+    /*** SKILLS ***/
+    /*** MY WORK ***/
+    /*** CONTACT ***/
 }
 
 
 /***** 1200px *****/
-
-
 @media all and (max-width: 1200px){
-    
+    /*** ACCUEIL ***/
+    /*** PROFIL ***/
+    /*** SKILLS ***/
+    /*** MY WORK ***/
+    /*** CONTACT ***/
+
 }
 
 
 /***** 1024px *****/
-
 @media all and (max-width: 1024px){
-    .normalNav{
+
+    /*** GENERAL ***/
+        .normalNav{
         display: none;
     }
-
-
     /***** BURGER MENU *****/
 
     .burger-container {
@@ -665,18 +761,21 @@ input[type=text], textarea, input[type=email] {
     .burgerNav{
         height: 100vh;
         width: 100%;
-        background-color: #131313;
         transition: all 1s;
         left: -100%;
         position: fixed;
         z-index: 1000;
         display: flex;
         align-items: center;
-        justify-content: center;
+        background: rgba( 47, 47, 47, 0.65 );
+        backdrop-filter: blur( 4.5px );
+        font-family: 'Aboreto', cursive;
+        font-weight: 100;
+        font-size: 25px;
     }
 
     .on{
-        left: 0!important;
+        left: 0;
         position: fixed;
     }
 
@@ -685,67 +784,110 @@ input[type=text], textarea, input[type=email] {
     }
 
     .burgerNav a{
-        color: white;
-        width: 100px;
-        height: 100px;
-        background-color: red;
+        color: black;
+        width: 148px;
+        height: 80px;
+        background-color: white;
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 2vh;
+        text-decoration: none;
+        border-radius: 20px;
+    }
+    
+    /*** ACCUEIL ***/
+    /*** PROFIL ***/
+    /*** SKILLS ***/
+    /*** MY WORK ***/
+    /*** CONTACT ***/
+    
+}
+
+
+/***** 820px *****/   /**** iPad Air *****/
+@media all and (max-width: 820px){
+        
+    /*** ACCUEIL ***/        
+    .discover{
+        top: 60%;
+    }   
+        
+    .jobs{
+        width: 600px;
     }
 
+    #accueil h1{
+        font-size: 55px;
+    }
+    
+    .section{
+        min-height: 200vh;
+    }
+
+    .last{
+    min-height: 300vh!important;
+}
+
+        /*** PROFIL ***/
+        /*** SKILLS ***/
+        /*** MY WORK ***/
+        /*** CONTACT ***/
 }
 
 /***** 768px *****/
 @media all and (max-width: 768px){
 
+    /*** ACCUEIL ***/
+    
+    .discover{
+        top: 65%;
+    }  
     .moi{
-        right: 0;
-        background-position-x: center;
-        background-position-y: center;
+        top: 65px;
     }
 
-    .choice{
-        display: flex;
-        margin-top: 20px;
-        gap: 10px;
-        flex-direction: column;
-    }
+        
+    /*** PROFIL ***/
+    /*** SKILLS ***/
+    /*** MY WORK ***/
+    /*** CONTACT ***/
 
-        /* Profil */
-    .tempo{
-        display: none;
-    }
 
 
 }
 
+/***** 428px *****/ /* iPhone 14 plus */
 
-/***** 450px *****/
+/************************ Faire mode paysage ********************/
+/************************ Faire mode paysage ********************/
+/************************ Faire mode paysage ********************/
+/************************ Faire mode paysage ********************/
 
+@media all and (max-width: 428px){
 
-@media all and (max-width: 450px){
- 
     .moi{
-        background-size: 165%;
+        right: 0;
+        top: 0;
+        background-position: center center;
+        background-size: cover;
     }
-
-    #accueil h1{
-        font-size: 47px;
-    }
-
+    
     .discover{
         top: 70%;
     }
 
-    .choice{
-        gap: 25px;
+    .jobs{
+        width: 375px;
     }
 
-    .bouton-accueil{
-        font-size: 15px;
+    #accueil h1{
+        font-size: 30px;
     }
+
+    .jobs h1{
+        font-size: 36px!important;
+    }
+
 
 }
 
@@ -754,13 +896,26 @@ input[type=text], textarea, input[type=email] {
 
 
 @media all and (max-width: 375px){
-
     .moi{
-        background-size: 140%;
+        right: 0;
+        top: 0;
+        background-position: center center;
+        background-size: cover;
+    }
+    
+    .discover{
+        top: 65%;
     }
 
-    #accueil h1{
-        font-size: 43px;
+    .jobs{
+        width: 335px;
     }
 
+    #looking{
+        font-size: 28px!important;
+    }
+
+    .jobs h1{
+        font-size: 32px!important;
+    }
 }
