--- a/style.css
+++ b/style.css
@@ -363,11 +363,17 @@ nav h1{
 
 .contenu{
     position: sticky;
-    height: 500px;
-    width: 500px;
+    height: 428px;
+    width: 330px;
     top: 20%;
     background: white;
     z-index: 1;
+    background-image: url(images/whoami/whoami.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    border: 1px solid white;
+    border-radius: 15px;
 }
 
 .texte{
@@ -887,9 +893,49 @@ input[type=text], textarea, input[type=email] {
     .jobs h1{
         font-size: 36px!important;
     }
+    
+    /*** PROFIL ***/
+    .left-content{
+        display: flex;
+        min-height: 100vh;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
 
+    .contenu{
+        position: relative;
+        height: 289px;
+        width: 230px;
+        top: 0;
+    }
 
+    .texte{
+        width: 90%;
+        position: relative;
+        top: 0;
+        margin-left: 0;
+        text-align: justify;
+        font-size: 20px;
+    }
+
+    /*** SKILLS ***/
+    .skillsWrapper {
+    grid-template-columns: 1fr 1fr;
+    row-gap: 0%;
+    min-height: 100vh;
+    }
+    
+    /*** MY WORK ***/
+    .travaux{
+        height: 160px;
+    }
+
+    .categorie{
+        margin-bottom: 75px;
+    }
 }
+
 
 
 /***** 375px *****/
