--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html{
     scroll-behavior:smooth
 }
 
+
 /***** MENU *****/
 header{
     display: none;
@@ -106,6 +107,172 @@ nav h1{
     right: 26px;
 }
 
+/***** FOOTER *****/
+#footer1 {
+    width: 100%;
+    min-height: 40vh;
+    background-color: black;
+    color: white;
+    font-family: 'Aboreto', cursive;
+    font-weight: 100;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    list-style: none;
+    z-index: 5;
+}
+
+#footer1 ul {
+    list-style: none;
+    margin-bottom: 30px;
+}
+
+#footer1 h3 {
+    padding-top: 30px;
+    margin-bottom: 30px;
+}
+
+#footer1 a {
+    text-decoration: none;
+    color: white;
+    font-family: 'Outfit', sans-serif;
+    line-height: 37px;
+}
+
+#footer2 {
+    font-family: 'Outfit', sans-serif;
+    width: 100%;
+    min-height: 6vh;
+    background-color: black;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+
+#footer2 div {
+    text-align: center;
+    line-height: 20px;
+}
+
+#menufooter3 ul :nth-child(3) {
+    margin-top: 40px;
+}
+
+
+@media all and (max-width: 650px) {
+    #footer1 {
+        flex-direction: column;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #footer1 h3 {
+        text-align: center;
+    }
+
+    #footer1 ul {
+        text-align: center;
+    }
+
+    .menufooter {
+        width: 80%;
+    }
+
+    #footer2 {
+        font-size: 13px;
+    }
+}
+
+
+/**************** LEGAL MENTIONS ***************/
+
+.legalBody{
+    background-color: black;
+}
+
+#legalmentions {
+    width: 100%;
+    min-height: 100vh;
+    color: white;
+    background-color: black;
+    font-family: 'Outfit', sans-serif;
+    padding-bottom: 200px;
+    overflow: hidden;
+}
+
+.wrapperlegal{
+    width: 80%;
+    margin: 0 auto;
+}
+
+#legalmentions h1 {
+    font-size: 3em;
+    padding-top: 12%;
+    margin-bottom: 40px;
+}
+
+#sous-titre {
+    margin-top: 20px;
+    background-color: white;
+    color: black;
+    padding: 10px 15px 15px 15px;
+}
+
+#legalmentions p {
+    font-size: 20px;
+    margin-top: 10px;
+}
+
+#legalmentions h3 {
+    font-size: 2em;
+    margin-top: 25px;
+}
+
+#legalmentions ul li {
+    font-size: 20px;
+    list-style: decimal;
+    list-style-position: inside;
+    margin-top: 20px;
+}
+
+#legalmentions ul li p {
+    margin-left: 20px;
+    line-height: 25px;
+}
+
+#lienlegal {
+    word-break: break-all;
+}
+
+@media all and (max-width: 900px) {
+    #legalmentions h1 {
+        padding-top: 25%;
+    }
+}
+
+/**************** Page 404 ***************/
+
+.body404{
+    background-color: black;
+}
+.notfound{
+    height: 90vh;
+    background-color: black;
+    color: white;
+    font-family: 'Aboreto', cursive;
+    display: flex;
+    font-size: 100px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column
+}
+
+.page{
+    font-size: 75px!important;
+}
+
 /***** ACCUEIL *****/
 
 #accueil{
@@ -187,7 +354,7 @@ nav h1{
     position: relative;
 }
 
-.moi{
+/* .moi{
     height: 100vh;
     position: fixed;
     width: 100%;
@@ -201,7 +368,7 @@ nav h1{
     transition: opacity 0.3s;
     z-index: -1;
 }
-
+*/
 .section.active .moi{
     opacity: 1;
 }
@@ -233,7 +400,7 @@ nav h1{
     animation-delay: 2s;
     animation-duration: 2s;
     animation-direction: normal;
-    color: cyan;
+    color: rgb(0, 255, 255);
   }
   
   .nametag:nth-of-type(3){
@@ -522,6 +689,10 @@ h3.cat{
 
 /***** GALERIE *****/
 
+.galleryBody{
+    background-color: black;
+}
+
 #galerie{
     min-height: 100vh;
     background-color: black;
@@ -551,63 +722,112 @@ h3.cat{
 
 #contact{
     position: relative;
-    min-height: 100vh;
+    min-height: 70vh;
     background-color: black;
 }
 
-input[type=text], textarea, input[type=email] {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    margin-right: 0px;
-    margin-left: 0px;
-    resize: vertical;
-  }
-  label{margin-right: 0px;
-    margin-left: 0px;
-    width: 100%;}
-  
-  input[type=submit] {
-    background-color: #1255a2;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  input[type=submit]:hover {
-    background-color: #1872D9;
-  }
-  
-  .containercontact {
-    /* Ajouter box-sizing */
+.containercontact{
     box-sizing : border-box;
-    border-radius:5px;
-    background-color:#f2f2f2;
     padding:20px;
     width: 100%;
-    /* redéfinition 400 + 2*20 */
     max-width: 440px;
     margin:0 auto;
   }
-  h1.contact  {
-    color: #ffc800;
+
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#nom{
+    background-color: black;
+    height: 50px;
+    width: 250px;
+    color: white;
+    border-bottom: 1px solid white;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    padding-left: 12px;
+    font-size: 12px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+}
+
+#email{
+    background-color: black;
+    height: 50px;
+    width: 300px;
+    color: white;
+    border-bottom: 1px solid white;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+}
+
+input[type=text], textarea, input[type=email]{
     width: 100%;
-  }
+    padding: 12px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+    background-color: black;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    color: white;
+}
 
+input[type=submit]{
+    font-family: 'Aboreto', cursive;
+    font-weight: 600;
+    background-color: black;
+    color: white;
+    padding: 12px 20px;
+    border: 1px solid white;
+    border-radius: 10px;
+    cursor: pointer;
+}
+  
+input[type=submit]:hover{
+    background-color: white;
+    color: black;
+}
 
-/***** GALERY.PHP *****/
+.success{
+    height: 70px;
+    width: 300px;
+    background-color: cadetblue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    border-radius: 10px;
+    font-family: 'Aboreto';
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+/***** BACK BUTTON *****/
+
+.back{
+    display: flex;
+    height: 100%;
+    width: 100%;
+}
 
 .goBack{
-    display: block;
-    height: 100px;
-    width: 100px;
-    background-color: red;
+    display: flex;
+    background-color: black;
+    font-family: 'Aboreto', cursive;
+    font-size: 20px;
+    color: white;
+    height: 10vh;
+    align-items: center;
+    margin-left: 50px;
 }
 
 
