--- a/style.css
+++ b/style.css
@@ -716,6 +716,36 @@ h3.cat{
     width: 200px;
     height: 200px;
     object-fit: cover;
+    cursor: pointer;
+}
+
+
+.lightbox{
+    display: none;
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+.lightbox-content {
+    max-width: 80%;
+    max-height: 80%;
+    margin: auto;
+    display: block;
+}
+
+.close{
+    color: white;
+    position: absolute;
+    top: 15px;
+    right: 25px;
+    font-size: 35px;
+    font-weight: bold;
+    cursor: pointer;
 }
 
 /***** CONTACT *****/
