--- a/style.css
+++ b/style.css
@@ -354,7 +354,7 @@ nav h1{
     position: relative;
 }
 
-/* .moi{
+.moi{
     height: 100vh;
     position: fixed;
     width: 100%;
@@ -368,7 +368,7 @@ nav h1{
     transition: opacity 0.3s;
     z-index: -1;
 }
-*/
+
 .section.active .moi{
     opacity: 1;
 }
