--- a/style.css
+++ b/style.css
@@ -276,8 +276,6 @@ nav h1{
 /***** ACCUEIL *****/
 
 #accueil{
-    width: 100%;
-    display: flex;
     background-color: black;
     flex-direction: column;
     justify-content: center;
@@ -341,37 +339,21 @@ nav h1{
 }
 
 .section{
-    min-height: 100vh;
-    position: relative;
-    z-index: 0;
-}
-
-.last{
-    min-height: 150vh!important;
-}
-
-.image-container{
-    position: relative;
-}
-
-.moi{
     height: 100vh;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    right: 7%;
-    background-size: contain;
-    background-position: right bottom;
-    background-repeat: no-repeat;
-    mix-blend-mode: multiply;
-    opacity: 0;
-    transition: opacity 0.3s;
-    z-index: -1;
+    display: flex;
 }
 
-.section.active .moi{
-    opacity: 1;
+.parfait{
+    width: 50%;
 }
+
+.gif{
+    width: 50%;
+    background-image: url(images/accueil/GifAnim.gif);
+    height: 50%;
+    background-size: contain;
+    background-repeat: no-repeat;}
+
 
  .jobs{
     height: 60px;
