--- a/style.css
+++ b/style.css
@@ -310,6 +310,25 @@ nav h1{
     border: 1px solid white;
 }
 
+.DLCV{
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;}
+
+.cv{
+    width: 240px;
+    margin-top: 52px;
+    display: flex;
+    justify-content: center;
+}
+
+.details{
+    display: flex;
+    color: grey;
+    font-size: 15px;
+}
+
 .whoami{
     background-color: black!important;
     border: 1px solid white!important;
@@ -504,17 +523,8 @@ nav h1{
 .left-content{
     display: flex;
     width: 80%;
-    height: 100vh;
+    height: 60vh;
     margin: 0 auto;
-    justify-content: center;
-}
-
-.right-content{
-    display: flex;
-    width: 80%;
-    height: 100vh;
-    margin: 0 auto;
-    flex-direction: row-reverse;
     justify-content: center;
 }
 
@@ -536,17 +546,7 @@ nav h1{
 .texte{
     width: 50%;
     position: relative;
-    /* top: 20%; */
     margin-left: 30px;
-    text-align: justify;
-    font-size: 20px;
-}
-
-.texte-droite{
-    width: 50%;
-    position: relative;
-    top: 20%;
-    margin-right: 30px;
     text-align: justify;
     font-size: 20px;
 }
@@ -556,6 +556,8 @@ nav h1{
     width: 100%;
     padding: 5px;
 }
+
+
 
 /***** SKILLS *****/
 
